# FYP_Binder_Agent

./: .gitignore  main.py  pyproject.toml  test_format.py  trace_analyse.html
@eaDir/: bytedance PXDesignBench 633f5d156b0c507fdc30112b21a42e4c99a77ebb pxdbench-tools_af2.zip@SynoEAStream
core/: __init__.py  agent.py  inspector.py  smolagent_tools.py  structural_filters.py  tools.py
databases/: actual_target_proteins.fasta  cleaned_final.csv  iedb_epitopes.fasta  plain_training.csv  proteinbase_all_data_28_01_2026.csv:Zone.Identifier  proteinbase_analysis.ipynb  sabdab_sequences.fasta
databases/iedb_db/: iedb  iedb.index  iedb.lookup  iedb.source  iedb_h  iedb_h.index
databases/sabdab_db/: sabdab  sabdab.lookup  sabdab.source  (+2 more)
targets/: H0YG99.fasta  egfr.fasta
tests/: eval_test_suite.py  proteinx.sh  test_alphafold_validation.py  test_cpu_checks.py
traces/: reasoning_trace_foxm1_20260521_023433.json  reasoning_trace_mdm2_20260521_132720.json  reasoning_trace_mdm2_20260521_145725.json  reasoning_trace_mdm2_20260522_170227.json  reasoning_trace_mdm2_20260526_033824.json  reasoning_trace_mdm2_20260526_063028.json  reasoning_trace_sars-cov2-spike_20260517_142850.json  reasoning_trace_sars-cov2-spike_20260518_133940.json  reasoning_trace_sars-cov2-spike_20260518_145355.json  reasoning_trace_sarscov2_20260519_062602.json  reasoning_trace_unknown_20260520_155029.json  trace_20260517_142850_1779028130.json  trace_20260518_133939_1779111579.json  trace_20260518_145350_1779116030.json  trace_20260519_062602_1779171962.json  trace_20260520_155029_1779292229.json
(+10 files in other folders)
